# sts2-wiki

./: .gitignore  justfile  pyproject.toml
data/: .llm_cache.json
data/v0.100.0/: monsters.json
data/v0.100.0/events/: AbyssalBaths.json  Amalgamator.json  (+56 more)
data/v0.101.0/: acts.json  ancients.json  cards.json  characters.json  enchantments.json  encounters.json  epochs.json  events.json  monsters.json  potions.json  powers.json  relics.json
data/v0.103.2/: acts.json  ancients.json  cards.json  characters.json  enchantments.json  encounters.json  monsters.json  potions.json  powers.json  relics.json
data/v0.98.2/: monsters.json
data/v0.99.1/: enchantments.json
docs/: llm-extraction-todos.md
overrides/cards/: big-bang.md
overrides/encounters/: an-automaton-pair.md  bowlbug-swarm.md  deprecated-encounter.md
overrides/events/: battleworn-dummy.md  the-future-of-potions.md
scripts/: check_images.py  common.py  extract_enchantments.py  extract_events.py  extract_images.py  extract_monsters.py  generate_cards.py  generate_characters.py  generate_enchantments.py  generate_encounters.py  generate_events.py  generate_monsters.py  generate_potions.py  generate_powers.py  generate_relics.py  llm_extract.py  merge_monster_scaling.py  monster_notes.py
scripts/prompts/: extract_card.md  extract_enchantment.md  extract_encounter.md  extract_event.md  extract_monster.md  extract_potion.md  extract_power.md  extract_relic.md
site/: .env.example  astro.config.mjs  package-lock.json
site/src/: content.config.ts  utils.ts
tools/lookup/: lookup.py  test_lookup.py
(+1944 files in other folders)
