[project]
name = "sts2-wiki"
version = "0.1.0"
description = "Slay the Spire 2 wiki generator"
requires-python = ">=3.12"
dependencies = ["claude-agent-sdk", "pillow", "texture2ddecoder"]

[dependency-groups]
dev = ["ruff", "mypy"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
